# ecoVAD

./: .dockerignore  .gitignore  Dockerfile  README.md  anonymise_data.py  config_inference.yaml  config_training.yaml  extract_detection.py  pyproject.toml  train_ecovad.py
.devcontainer/: devcontainer.json
VAD_algorithms/ecovad/: VGG11.py  ecoVAD_predict.py  make_data.py  make_data_old.py  train_model.py
VAD_algorithms/ecovad/_utils/: audiodataset.py  augment_audio.py  earlystopping.py  generate_spectrogram.py
VAD_algorithms/pyannote/: pyannote_predict.py
VAD_algorithms/webrtcvad/: webrtc_predict.py
notebooks/: anonymisation.ipynb  train_ecovad.ipynb  visualisation.ipynb
tests/: test_audio_anonymisation.py  test_audiodataset.py  test_make_data.py
utils/: parse_json.py  process_audio.py
